# kitchen-image-pipeline-mvp

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  kitchen_image_pipeline_final_mvp_spec.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260606_1938_add_candidate_reviews.py  20260606_2015_add_review_and_final_constraints.py  20260607_0100_add_mistake_deleted_at.py  20260607_0800_reference_brief_jsonb.py  20260607_0900_add_candidate_review_response_time.py  20260607_0910_add_reference_brief_error_message.py  20260610_1200_add_mistake_side_feedback.py  66ba688ba236_baseline_existing_schema.py
app/: auth.py  config.py  db.py  main.py  worker.py
app/commands/: cleanup_storage.py  host_reviewer_bridge.py  reviewer_cli_adapter.py
app/models/: __init__.py  asset.py  audit.py  candidate.py  feedback.py  job.py  mistake.py  video.py
app/routers/: __init__.py  admin.py  assets.py  candidates.py  jobs.py  mistakes.py  storage.py  videos.py
app/schemas/: __init__.py  asset.py  candidate.py  job.py  mistake.py  video.py
app/services/: candidate_action_service.py  candidate_review_runner.py  candidate_review_service.py  candidate_scoring_service.py  candidate_status.py  export_service.py  final_asset_service.py  image_processing_limiter.py  job_runner.py  job_service.py  llm_service.py  mistake_extraction_service.py  reference_brief_service.py  (+4 more)
docs/: admin_js_smoke.md  mvp_completion_audit_20260607.md  mvp_release_runbook_20260607.md  project_handoff_20260610.md  reviewer_cli_worker.md
scripts/: smoke_admin_inline_js.mjs
(+37 files in other folders)
