[project]
name = "kitchen-image-pipeline-mvp"
version = "0.1.0"
description = "Lightweight MVP for kitchen design mistakes image pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary]>=3.1.19",
    "alembic>=1.13.1",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.1",
    "pillow>=10.3.0",
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
